Little changes on the css file and html

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </style>
     <p>
         <nav>
-            <a href="/about-us/">About Us</a> |
+            <!-- <a href="/about-us/">About Us</a> | -->
             <a href="/our-enterprise/">Our-Enterprise</a> |
             <a href="/tech-projects/">Tech-Projects</a> 
-            <a href="/contact/">CONTACT</a>
+            <!-- <a href="/contact/">CONTACT</a> -->
         </nav>
     </p>
 </head>
