--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cool Background-Generator></title>
+    <title>Background-Generator></title>
     <link rel="stylesheet" href="style.css">
     <style>
        img {
