--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </style>
     <p>
         <nav>
-            <!-- <a href="/about-us/">About Us</a> | -->
-            <a href="/our-enterprise/">Our-Enterprise</a> |
-            <a href="/tech-projects/">Tech-Projects</a> 
-            <!-- <a href="/contact/">CONTACT</a> -->
+            <a href="/about-us/">About</a> |
+            <!-- <a href="/our-enterprise/">Our-Enterprise</a> |
+            <a href="/tech-projects/">Tech-Projects</a>  -->
+            <a href="/contact/">CONTACT</a>
         </nav>
     </p>
 </head>
@@ -27,6 +27,9 @@
     <input class="color2" type="color" name="color1" value="#ff0000">
     <h2>Select Background Color</h2>
     <h3>Welcome to Our Homepage</h3>
+    <img src="https://www.pexels.com/photo/man-wearing-black-notched-lapel-blazer-2955375/"" width="300" height="400">
+    <br>
+    <p><em><h2>-By Emmanuel Ambi James</h2></em></p>
     <script type="text/javascript" src="script.js"></script>
     
 </body>
