--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <input class="color2" type="color" name="color1" value="#ff0000">
     <h2>Select Background Color</h2>
     <h3>Welcome to Our Homepage</h3>
-    <img src="https://www.pexels.com/photo/man-wearing-black-notched-lapel-blazer-2955375/"" width="300" height="400">
+    <!-- <img src="https://www.pexels.com/photo/man-wearing-black-notched-lapel-blazer-2955375/"" width="300" height="400"> -->
     <br>
     <p><em><h2>-By Emmanuel Ambi James</h2></em></p>
     <script type="text/javascript" src="script.js"></script>
